@@ -4,16 +4,17 @@ test_that("performance", {
   res = makeResampleDesc("Holdout")
   lrn = makeLearner("classif.rpart")
   rf = resample(lrn, task = binaryclass.task, resampling = res, measures = list(acc, timeboth))
+  expect_true(all(rf$aggr > 0))
 
   res = makeResampleDesc("Bootstrap", iters = 3L)
   rf = resample(lrn, task = binaryclass.task, resampling = res, measures = list(acc, timeboth))
+  expect_true(all(rf$aggr > 0))
   m = setAggregation(acc, test.median)
   rf = resample(lrn, task = binaryclass.task, resampling = res, measures = m)
+  expect_true(all(rf$aggr > 0))
 
   # custom measure
   res = makeResampleDesc("CV", iters = 3)
-  r = resample(lrn, task = binaryclass.task, resampling = res)
-
   mymeasure = makeMeasure(id = "mym", minimize = TRUE, properties = c("classif", "classif.multi", "predtype.response"),
     fun = function(task, model, pred, feats, extra.args) {
       # normal test error
@@ -25,8 +26,11 @@ test_that("performance", {
       expect_equal(e1, e2)
       0
     })
+  r = resample(lrn, task = binaryclass.task, resampling = res, measures = mymeasure)
+  expect_true(r$aggr >= 0)
 
-  performance(r$pred, measures = mymeasure, task = binaryclass.task)
+  perf = performance(r$pred, measures = mymeasure, task = binaryclass.task)
+  expect_true(perf >= 0)
 
   # multiple measures as list
   res = performance(r$pred, measures = list(ber, acc, tp), task = binaryclass.task)
@@ -58,4 +62,19 @@ test_that("performance checks for missing truth col", {
 test_that("performance checks for req prob type", {
   lrn = makeLearner("classif.rpart")
   expect_error(holdout(lrn, binaryclass.task, measures = auc), "predict type to be: 'prob'")
+})
+
+test_that("performance works with ResamplePrediction", {
+  lrn = makeLearner("classif.lda", predict.type = "prob")
+  res = makeResampleDesc("Bootstrap", iters = 5L, predict = "both")
+  rf = resample(lrn, task = binaryclass.task, resampling = res, mmce)
+  expect_true(rf$aggr > 0)
+  expect_true(rf$aggr < 1)
+  perf = performance(rf$pred)
+  expect_true(perf > 0)
+  expect_true(perf < 1)
+
+  # FIXME: names for measures are different for aggregated measures, which we currently don't do because it breaks other stuff
+  rf$aggr = setNames(rf$aggr, names(perf))
+  expect_equal(rf$aggr, perf)
 })
